<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.project.android.secureexammanagementsystem.admin.AddQuestionFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_text"
        android:inputType="text"
        android:id="@+id/etQuestion"
        android:maxLength="100"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer1_text"
        android:inputType="text"
        android:id="@+id/etAnswer1"
        android:maxLength="30"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer2_text"
        android:inputType="text"
        android:id="@+id/etAnswer2"
        android:maxLength="30"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer3_text"
        android:inputType="text"
        android:id="@+id/etAnswer3"
        android:maxLength="30"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer4_text"
        android:inputType="text"
        android:id="@+id/etAnswer4"
        android:maxLength="30"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correct_answer_text"
        android:inputType="text"
        android:id="@+id/etCorrectAnswer"
        android:maxLength="30"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/level_text"
        android:id="@+id/spLevel"
        android:maxLength="3"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_text"
        android:id="@+id/spQueSubject"
        android:maxLength="3"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_question_text"
        android:id="@+id/btn_add_question"/>
</LinearLayout>
