<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_user"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/add_user_text" />
        <item
            android:id="@+id/nav_add_subject"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/add_subject_text" />
        <item
            android:id="@+id/nav_add_question"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_question_text" />

    </group>
    <group>
        <item
            android:id="@+id/nav_admin_logout"
            android:title="@string/logout_text"/>
    </group>


</menu>
