<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.android.secureexammanagementsystem.student.GetResultFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:text="@string/you_have_scored_text"/>
        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/subject_text"/>
        <TextView
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="@dimen/fab_margin"
            android:id="@+id/tvResultSubject"/>
        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/score_text"/>
        <TextView
            android:layout_row="2"
            android:layout_column="1"
            android:id="@+id/tvScore"/>
        <Button android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_result_ok"
            android:text="@string/ok_text"/>


</GridLayout>
