<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.android.secureexammanagementsystem.LoginActivity">

    <TableRow>
        <TextView android:id="@+id/textUserID"
            android:text="@string/user_name_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText android:id="@+id/etUserID"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:inputType="text"
            android:maxLength="40"
            android:layout_span="2"
            />
    </TableRow>
    <TableRow>
        <TextView android:id="@+id/textPassword"
            android:text="@string/passwd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:maxLength="15"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <Button android:id="@+id/btn_login"
            android:text="@string/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:onClick="login"/>

    </TableRow>
</TableLayout>
